--- a/index.html
+++ b/index.html
@@ -555,37 +555,45 @@
     <!-- Team End -->
 
 
+    <div class="container-fluid py-5" style="background-color: #0f172a;">
+        <div class="container py-5">
+            <h1 class="display-4 text-uppercase text-center mb-2 text-white">Nossa Equipe</h1>
+            <p class="mb-4 text-center pl-lg-5 mb-5">Profissionais dedicados que tornam nossa missão possível com
+                excelência e paixão pelo que
+                fazem.</p>
 
-    <section id="equipe">
-        <h2>Nossa Equipe</h2>
-        <p class="subtitulo">Profissionais dedicados que tornam nossa missão possível com excelência e paixão pelo que
-            fazem.</p>
 
-        <!-- EQUIPE TÉCNICA -->
-        <h3>Equipe Técnica</h3>
-        <div class="grupo">
-            <div class="galeria">
-                <img src="img/portifolio/foto_8.jpg" alt="Imagem 1">
-                <img src="img/portifolio/foto_9.jpg" alt="Imagem 3">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 mb-5"> 
+                    <!-- EQUIPE TÉCNICA -->
+                    <h3>Equipe Técnica</h3>
+                    <div class="grupo">
+                        <div class="galeria">
+                            <img src="img/portifolio/foto_8.jpg" alt="Imagem 1">
+                            <img src="img/portifolio/foto_9.jpg" alt="Imagem 3">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 mb-5">
+                    <!-- MOTORISTAS -->
+                    <h3>Motoristas</h3>
+                    <div class="grupo">
+                        <div class="galeria">
+                            <img src="img/portifolio/foto_19.jpg" alt="Imagem 1">
+                            <img src="img/portifolio/foto_18.jpg" alt="Imagem 3">
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <!-- MOTORISTAS -->
-        <h3>Motoristas</h3>
-        <div class="grupo">
-            <div class="galeria">
-                <img src="img/portifolio/foto_19.jpg" alt="Imagem 1">
-                <img src="img/portifolio/foto_18.jpg" alt="Imagem 3">
-            </div>
         </div>
-
         <!-- CHAMADA PARA AÇÃO -->
-           <div class="py-5 px-4 text-center">
-                <a class="btn btn-primary mt-2 py-3 px-5" href="#contacto">Fale com Nossa Equipe</a>
-            </div>
- 
-    </section>
+        <div class="py-5 px-4 text-center">
+            <a class="btn btn-primary mt-2 py-3 px-5" href="#contacto">Fale com Nossa Equipe</a>
+        </div>
 
+    </div>
+    </div>
 
     <!-- Testimonial Start -->
     <div style="background-color: rgb(247, 247, 247); padding: 2% 0% 2% 0%  ;">
@@ -897,8 +905,7 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script src="js/propio.js"></script>
-
-
+ 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="javascript/script.js"></script>
 </body>
