--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -168,9 +168,6 @@
                             do dia a dia.
                         </p>
 
-                        <div class="py-5 px-4">
-                            <a class="btn btn-primary mt-2 py-3 px-5" href="#equipe">Ver nossa equipe</a>
-                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -178,41 +175,41 @@
                         <img src="./img/sobre.png" alt="Car Image" />
                     </div>
                 </div>
-            </div>
 
-
-            <div class="row mt-5 pt-5">
-                <div class="col-lg-4 mb-2">
-                    <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
-                            style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-headset text-secondary"></i>
+                <div class="row mt-3 pt-3">
+                    <div class="col-lg-4 mb-2">
+                        <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
+                            <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
+                                style="width: 100px; height: 100px;">
+                                <i class="fa fa-2x fa-headset text-secondary"></i>
+                            </div>
+                            <h4 class="text-uppercase m-0">24/7 Suporte para aluguel de carros</h4>
                         </div>
-                        <h4 class="text-uppercase m-0">24/7 Suporte para aluguel de carros</h4>
+                    </div>
+                    <div class="col-lg-4 mb-2">
+                        <div class="d-flex align-items-center bg-secondary p-4 mb-4" style="height: 150px;">
+                            <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
+                                style="width: 100px; height: 100px;">
+                                <i class="fa fa-2x fa-car text-secondary"></i>
+                            </div>
+                            <h4 class="text-light text-uppercase m-0">Reserva de carro a qualquer hora</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 mb-2">
+                        <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
+                            <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
+                                style="width: 100px; height: 100px;">
+                                <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
+                            </div>
+                            <h4 class="text-uppercase m-0">Vários locais de retirada</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-2">
-                    <div class="d-flex align-items-center bg-secondary p-4 mb-4" style="height: 150px;">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
-                            style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-car text-secondary"></i>
-                        </div>
-                        <h4 class="text-light text-uppercase m-0">Reserva de carro a qualquer hora</h4>
-                    </div>
+ 
+                <div class="py-1 px-1">
+                    <a class="btn btn-primary mt-2 py-3 px-5" href="#equipe">Ver nossa equipe</a>
                 </div>
-                <div class="col-lg-4 mb-2">
-                    <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
-                            style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
-                        </div>
-                        <h4 class="text-uppercase m-0">Vários locais de retirada</h4>
-                    </div>
-                </div>
-            </div>
-
-
-
+            </div> 
         </div>
     </div>
 
@@ -564,7 +561,7 @@
 
 
             <div class="row">
-                <div class="col-lg-6 col-md-6 mb-5"> 
+                <div class="col-lg-6 col-md-6 mb-5">
                     <!-- EQUIPE TÉCNICA -->
                     <h3>Equipe Técnica</h3>
                     <div class="grupo">
@@ -756,10 +753,10 @@
                             </div>
                         </div>
                         <div class="d-flex mb-3">
-                            <i class="fa fa-2x fa-phone text-primary flex-shrink-0 mr-3"></i>
+                            <i class="fa fa-2x fa-whatsapp text-primary flex-shrink-0 mr-3"></i>
                             <div class="mt-n1">
-                                <h5 class="text-light">Telefone</h5>
-                                <p>+244 923 917 139</p>
+                                <h5 class="text-light">WhatsApp</h5>
+                                <p>+244 928 103 161 </p>
                             </div>
                         </div>
                         <div class="d-flex">
@@ -887,6 +884,11 @@
     </div>
     <!-- Footer End -->
 
+    <!-- Botão do WhatsApp com efeito piscando -->
+    <a href="https://wa.me/244928103161 " class="whatsapp-button" target="_blank" title="Fale conosco no WhatsApp">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp">
+    </a>
+
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
@@ -905,7 +907,7 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script src="js/propio.js"></script>
- 
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="javascript/script.js"></script>
 </body>
