--- a/TESTE.HTML
+++ b/TESTE.HTML
@@ -3,58 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Botão WhatsApp Piscando</title>
+  <title>Imagem com Dois Lados</title>
   <style>
-    .whatsapp-button {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #25D366;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    body {
       display: flex;
-      justify-content: center;
+      height: 100vh;
       align-items: center;
-      z-index: 9999;
-      animation: pulse 1.5s infinite;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      justify-content: center;
+      background-color: #f0f0f0;
     }
 
-    .whatsapp-button:hover {
-      transform: scale(1.1);
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
+    .flip-container {
+      perspective: 1000px;
+      width: 300px;
+      height: 200px;
     }
 
-    .whatsapp-button img {
-      width: 30px;
-      height: 30px;
-      filter: brightness(0) invert(1); /* ícone branco */
+    .flipper {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+      cursor: pointer;
     }
 
-    @keyframes pulse {
-      0% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.6);
-      }
-      70% {
-        transform: scale(1.05);
-        box-shadow: 0 0 0 10px rgba(37, 211, 102, 0);
-      }
-      100% {
-        transform: scale(1);
-        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
-      }
+    .flip-container.clicked .flipper {
+      transform: rotateY(180deg);
+    }
+
+    .front, .back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .front img, .back img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .back {
+      transform: rotateY(180deg);
     }
   </style>
 </head>
 <body>
 
-  <!-- Botão do WhatsApp com efeito piscando -->
-  <a href="https://wa.me/244923123456" class="whatsapp-button" target="_blank" title="Fale conosco no WhatsApp">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp">
-  </a>
+<div class="flip-container" onclick="this.classList.toggle('clicked')">
+  <div class="flipper">
+    <div class="front">
+      <img src="img/carros/car-rent-6.png" alt="Frente">
+    </div>
+    <div class="back">
+      <img src="img/carros/car-rent-5.png" alt="Verso">
+    </div> 
+  </div>
+</div>
 
 </body>
 </html>
