--- a/carros.html
+++ b/carros.html
@@ -487,7 +487,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-uppercase text-light mb-4">Newsletter</h4>
-                <p class="mb-4">EXISTEMOS POR TI E PARA TI</p>
+                <p class="mb-4">existimos por ti e para ti</p>
                 <div class="w-100 mb-3">
                     <div class="input-group">
                         <input type="text" class="form-control bg-dark border-dark" style="padding: 25px;"
