--- a/carros.html
+++ b/carros.html
@@ -439,7 +439,7 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-uppercase text-light mb-4">Entre em contato</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Rua Dr. Antonio Agostinho Neto (SIS
-                    Hotel)</p>
+                    Hotel) - Cabinda - Angola </p>
                 <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+244 923 917 139</p>
                 <p><i class="fa fa-envelope text-white mr-3"></i>geral@dualvision.com</p>
                 <h6 class="text-uppercase text-white py-2">Siga-nos</h6>
@@ -508,9 +508,12 @@
     </div>
     <!-- Footer End -->
 
+    <!-- Botão do WhatsApp com efeito piscando -->
+    <a href="https://wa.me/244928103161" class="whatsapp-button" target="_blank" title="Fale conosco no WhatsApp">
+        <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp">
+    </a>
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
-
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
