--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                             <i class="fa fa-2x fa-map-marker-alt text-primary flex-shrink-0 mr-3"></i>
                             <div class="mt-n1">
                                 <h5 class="text-light">Sede</h5>
-                                <p>Rua Dr. Antonio Agostinho Neto (SIS Hotel)</p>
+                                <p>Rua Dr. Antonio Agostinho Neto (SIS Hotel) -   Cabinda - Angola </p> 
                             </div>
                         </div>
                         <div class="d-flex mb-3">
@@ -832,7 +832,7 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-uppercase text-light mb-4">Entre em contato</h4>
                 <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>Rua Dr. Antonio Agostinho Neto (SIS
-                    Hotel)</p>
+                    Hotel) - Cabinda - Angola </p>
                 <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+244 923 917 139</p>
                 <p><i class="fa fa-envelope text-white mr-3"></i>geral@dualvision.com</p>
                 <h6 class="text-uppercase text-white py-2">Siga-nos</h6>
